--- a/app/assets/stylesheets/utils/variables.scss
+++ b/app/assets/stylesheets/utils/variables.scss
@@ -1,4 +1,5 @@
 $airbnb: #FF5A5F;
 $translucent-white: rgba(255,255,255,0.8);
 $offwhite: #f7f7f7;
+$green: #b4d289;
 $shadow: 0px 1px 20px 0px rgba(0, 0, 0, 0.15);
