Reseeded db to include new listings data

--- a/app/assets/stylesheets/pages/users.scss
+++ b/app/assets/stylesheets/pages/users.scss
@@ -56,7 +56,8 @@
     }
 }
 .user-avatar {
-    min-width: 80%;
+    width:280px;
+    height: 280px;
     object-fit: cover;
     box-shadow: $shadow;
 }
