Fix country search and display

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -82,7 +82,7 @@
         <dt>Number of Bedrooms</dt>
         <dd><%= @listing.bedroom_count %></dd>
         <dt>Country</dt>
-        <dd><%= country_name %></dd>
+        <dd><%= @listing.country_name %></dd>
         <dt>State</dt>
         <dd><%= @listing.state %></dd>
         <dt>City</dt>
