Fix payment verification

--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -36,7 +36,7 @@
             <p><%= @reservation.listing.address %></p>
             <p><%= @reservation.listing.city %></p>
             <p><%= @reservation.listing.state %></p>
-            <p><%= @reservation.listing.country %></p>
+            <p><%= @reservation.listing.country_name %></p>
           <% end %>
         </div>
       </div>
