Separate paid and unpaid reservations in users reservations index

--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -4,7 +4,7 @@
       <h1>Your reservations</h1>
       <% if @reservations.count != 0 %>
         <% if @reservations.where(paid:true).count > 0 %>
-          <h2>Confirmed reservations</h2>
+          <h2 class='mt-3'>Confirmed reservations</h2>
           <% @reservations.where(paid:true).each do |reservation| %>
             <section class='reservation-wrapper my-5'>
               <div class='reservation-photo-wrapper'>
@@ -38,8 +38,11 @@
 
             </section>
           <% end %>
+        <% end %> <!-- End paid reservations section -->
 
-        <% elsif @reservations.where(paid:false).count > 0 %>
+        <% if @reservations.where(paid:false).count > 0 %>
+          <h2 class='mt-2'>Pending reservations</h2>
+          <p>To confirm your reservation, please make payment.</p>
           <% @reservations.where(paid:false).each do |reservation| %>
           <section class='reservation-wrapper my-5'>
             <div class='reservation-photo-wrapper'>
@@ -73,7 +76,7 @@
 
           </section>
         <% end %>
-        <% end %>
+      <% end %><!-- End unpaid reservations section -->
       <% else %>
         <p> You have not made any reservations. </p>
       <% end %>
