--- a/app/views/reservation_mailer/reservation_confirmation_email.erb
+++ b/app/views/reservation_mailer/reservation_confirmation_email.erb
@@ -6,7 +6,7 @@
   <body>
     <h1>Congratulations <%= @customer.full_name %>!</h1>
     <p>
-      You have successfully confirmed your reservation.
+      You have successfully confirmed your reservation at <%= @reservation.listing.name %>.
       You can see details of your new reservation here: <%= @url %>
     </p>
   </body>
