--- a/app/assets/stylesheets/pages/listings.scss
+++ b/app/assets/stylesheets/pages/listings.scss
@@ -1,5 +1,5 @@
 .listing-hero {
-   @include hero-background(listing_hero);
+   @include hero-background("https://s3-ap-southeast-1.amazonaws.com/sammiepls-airbnb-clone/listing_hero.jpg");
    background-size: cover;
    background-position: center;
    height: 40vh;
