--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg fixed-top ">
   <%= link_to root_path do %>
-      <% image_tag 'airbnb_logo.svg', class: "logo"%>
+      <% image_tag 'https://s3-ap-southeast-1.amazonaws.com/sammiepls-airbnb-clone/airbnb_logo.svg', class: "logo"%>
   <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
