--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -27,7 +27,7 @@
         <% if listing.photos.first %>
           <%= image_tag listing.photos.first.thumb, class: "card-img-top"  %>
         <% else %>
-          <%= image_tag 'placeholder.png', class: "card-img-top"  %>
+          <%= image_tag 'https://s3-ap-southeast-1.amazonaws.com/sammiepls-airbnb-clone/placeholder.png', class: "card-img-top"  %>
         <% end %>
         <div class="card-block p-3">
           <div class='card-info'>
