--- a/app/assets/stylesheets/pages/listings.scss
+++ b/app/assets/stylesheets/pages/listings.scss
@@ -31,6 +31,8 @@
   border: 0;
   box-shadow: $shadow;
   height: 100%;
+  margin-left: 0!important;
+  margin-right: 0!important;
 }
 .new_listing {
   label {
